// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should be in loading status 1`] = `
<Fragment>
  <Suggestions
    suggestions="webhooks"
  />
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
    title="webhooks.page"
  />
  <div
    className="page page-limited"
  >
    <PageHeader
      loading={true}
    >
      <PageActions
        loading={true}
        onCreate={[Function]}
        webhooksCount={0}
      />
    </PageHeader>
  </div>
</Fragment>
`;

exports[`should fetch webhooks and display them 1`] = `
<Fragment>
  <Suggestions
    suggestions="webhooks"
  />
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
    title="webhooks.page"
  />
  <div
    className="page page-limited"
  >
    <PageHeader
      loading={false}
    >
      <PageActions
        loading={false}
        onCreate={[Function]}
        webhooksCount={2}
      />
    </PageHeader>
    <div
      className="boxed-group boxed-group-inner"
    >
      <WebhooksList
        onDelete={[Function]}
        onUpdate={[Function]}
        webhooks={
          Array [
            Object {
              "key": "1",
              "name": "foo",
              "url": "http://foo",
            },
            Object {
              "key": "2",
              "name": "bar",
              "url": "http://bar",
            },
          ]
        }
      />
    </div>
  </div>
</Fragment>
`;
